@@ -12,7 +12,6 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.Event;
 import org.bukkit.event.block.BlockBreakEvent;
 import org.bukkit.event.block.BlockPlaceEvent;
-import org.bukkit.event.entity.EntityDamageByEntityEvent;
 import org.bukkit.event.entity.EntityDeathEvent;
 import org.bukkit.event.player.AsyncPlayerChatEvent;
 import org.bukkit.event.player.PlayerCommandPreprocessEvent;
@@ -24,15 +23,12 @@ import java.util.concurrent.*;
 import java.util.function.Supplier;
 
 /**
- * Engine
- * 핵심 엔진
- * 조건 캐시 이벤트 디듀프 타겟 매처 체인 처리 보드 반복 처리
+ * Engine v2
+ * 단일 이벤트 파이프라인 기반 퀘스트 엔진
+ * 이벤트 처리, 조건, 타겟 매칭, 체인, 반복, 보드 퀘스트, NPC 상호 작용을 하나의 흐름으로 통합
  */
 public final class Engine {
 
-    private final Map<UUID, String> armedQuest = new ConcurrentHashMap<>();
-    private final Map<UUID, Long> armedUntil = new ConcurrentHashMap<>();
-    private static final long INTERACT_ARM_WINDOW_NANOS = 2_000_000_000L; // 2초
     private final QuestEnginePlugin plugin;
     private final QuestRepository quests;
     private final ProgressRepository progress;
@@ -40,24 +36,39 @@ public final class Engine {
     private final Msg msg;
     private final ExecutorService worker;
 
-    private final Map<UUID, Set<String>> interactArmed = new ConcurrentHashMap<>();
-    private final Map<String, BoolCacheEntry> conditionCache = new ConcurrentHashMap<>(1024);
-    private final Map<UUID, Object> playerLocks = new ConcurrentHashMap<>(256);
-    private final Map<UUID, Map<String, Long>> recentEventWindow = new ConcurrentHashMap<>(256);
-    private final Map<String, TargetMatcher> matchers = new ConcurrentHashMap<>(64);
+    private final Map<UUID, Object> playerLocks = new ConcurrentHashMap<UUID, Object>();
+    private final Map<UUID, Map<String, Long>> recentEventWindow = new ConcurrentHashMap<UUID, Map<String, Long>>();
+    private final Map<String, TargetMatcher> matchers = new ConcurrentHashMap<String, TargetMatcher>();
 
+    private final Map<String, BoolCacheEntry> conditionCache = new ConcurrentHashMap<String, BoolCacheEntry>();
     private final long conditionTtlNanos;
     private final long dedupWindowNanos;
+
+    private static final long NPC_ARM_WINDOW_NANOS = 2_000_000_000L;
 
     private static final class BoolCacheEntry {
         final boolean value;
         final long expireAt;
-        BoolCacheEntry(boolean v, long e) { value = v; expireAt = e; }
+        BoolCacheEntry(boolean value, long expireAt) {
+            this.value = value;
+            this.expireAt = expireAt;
+        }
     }
 
+    private static final class NpcArmState {
+        final String questId;
+        final long until;
+        NpcArmState(String questId, long until) {
+            this.questId = questId;
+            this.until = until;
+        }
+    }
+
+    private final Map<UUID, NpcArmState> npcArm = new ConcurrentHashMap<UUID, NpcArmState>();
+
     @FunctionalInterface
-    interface TargetMatcher {
-        boolean test(Player p, Event e, String target);
+    public interface TargetMatcher {
+        boolean test(Player player, Event event, String target);
     }
 
     public Engine(
@@ -75,10 +86,10 @@ public final class Engine {
         this.msg = msg;
         this.worker = worker;
 
-        long ttlMs = Math.max(50, plugin.getConfig().getLong("performance.condition-cache-ttl-ms", 300));
+        long ttlMs = Math.max(50L, plugin.getConfig().getLong("performance.condition-cache-ttl-ms", 300L));
         this.conditionTtlNanos = ttlMs * 1_000_000L;
 
-        long dedupMs = Math.max(3, plugin.getConfig().getLong("performance.event-dedup-window-ms", 10));
+        long dedupMs = Math.max(3L, plugin.getConfig().getLong("performance.event-dedup-window-ms", 10L));
         this.dedupWindowNanos = dedupMs * 1_000_000L;
 
         installDefaultMatchers();
@@ -86,11 +97,25 @@ public final class Engine {
         preloadInternalQuests();
     }
 
-    public QuestRepository quests() { return quests; }
-    public ProgressRepository progress() { return progress; }
-    public ActionExecutor actions() { return actions; }
-    public Msg msg() { return msg; }
-    public ExecutorService asyncPool() { return worker; }
+    public QuestRepository quests() {
+        return quests;
+    }
+
+    public ProgressRepository progress() {
+        return progress;
+    }
+
+    public ActionExecutor actions() {
+        return actions;
+    }
+
+    public Msg msg() {
+        return msg;
+    }
+
+    public ExecutorService asyncPool() {
+        return worker;
+    }
 
     public void refreshEventCache() {
         quests.reload();
@@ -98,16 +123,21 @@ public final class Engine {
     }
 
     public void shutdown() {
-        try { worker.shutdownNow(); } catch (Throwable ignored) {}
+        try {
+            worker.shutdownNow();
+        } catch (Throwable ignored) {
+        }
         conditionCache.clear();
         playerLocks.clear();
         recentEventWindow.clear();
         matchers.clear();
+        npcArm.clear();
     }
 
     public void startQuest(Player p, String questId) {
         if (p == null || questId == null) return;
-        QuestDef q = quests.get(questId);
+        String id = questId.toLowerCase(Locale.ROOT);
+        QuestDef q = quests.get(id);
         if (q == null) {
             p.sendMessage(msg.pref("invalid_args"));
             return;
@@ -115,83 +145,85 @@ public final class Engine {
         startQuest(p, q);
     }
 
-    // Engine.java 내부 startQuest(Player p, QuestDef q)
-    public void startQuest(Player p, QuestDef q) {
-        if (p == null || q == null) return;
-        UUID uid = p.getUniqueId();
-        String name = p.getName();
 
-        // 이미 완료한 퀘스트면 재수행 불가
-        if (progress.isCompleted(uid, name, q.id)) {
-            p.sendMessage(msg.pref("quest_no_repeat").replace("%quest_name%", q.name));
+    public void startQuest(Player player, QuestDef def) {
+        if (player == null || def == null) return;
+
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        if (progress.isCompleted(uid, name, def.id)) {
+            player.sendMessage(msg.pref("quest_no_repeat").replace("%quest_name%", def.name));
             return;
         }
 
-        // 이미 진행 중인 퀘스트면 중복 방지
-        if (progress.isActive(uid, name, q.id)) {
-            p.sendMessage(msg.pref("quest_already_active"));
+        if (progress.isActive(uid, name, def.id)) {
+            player.sendMessage(msg.pref("quest_already_active"));
             return;
         }
 
-        // 보드 전용인데 직접 명령어로 시도하면 거부
-        if (isBoardQuest(q) && !allowBoardStartContext(p)) {
-            p.sendMessage(msg.pref("quest_board_only"));
+        if (isBoardQuest(def) && !allowBoardStartContext(player)) {
+            player.sendMessage(msg.pref("quest_board_only"));
             return;
         }
 
-        // PUBLIC 퀘스트일 경우 accept 메시지와 started 메시지 생략
-        if (!isBoardQuest(q)) {
-            actions.runAll(q, "accept", p);
-            p.sendMessage(msg.pref("quest_started").replace("%quest_name%", q.name));
-        }
-
-        progress.start(uid, name, q.id);
-        actions.runAll(q, "start", p);
+        progress.start(uid, name, def.id);
+        actions.runAll(def, "accept", player);
+        actions.runAll(def, "start", player);
+        player.sendMessage(msg.pref("quest_started").replace("%quest_name%", def.name));
     }
 
     public void cancelQuest(Player p, String questId) {
         if (p == null || questId == null) return;
-        QuestDef q = quests.get(questId);
+        String id = questId.toLowerCase(Locale.ROOT);
+        QuestDef q = quests.get(id);
         cancelQuest(p, q);
     }
 
-    public void cancelQuest(Player p, QuestDef q) {
-        if (p == null || q == null) return;
-        UUID uid = p.getUniqueId();
-        String name = p.getName();
-        if (!progress.isActive(uid, name, q.id)) {
-            p.sendMessage(msg.pref("quest_not_active"));
+    public void cancelQuest(Player player, QuestDef def) {
+        if (player == null || def == null) return;
+
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        if (!progress.isActive(uid, name, def.id)) {
+            player.sendMessage(msg.pref("quest_not_active"));
             return;
         }
-        progress.cancel(uid, name, q.id);
-        actions.runAll(q, "cancel", p);
-        p.sendMessage(msg.pref("quest_canceled").replace("%quest_name%", q.name));
+
+        progress.cancel(uid, name, def.id);
+        actions.runAll(def, "cancel", player);
+        player.sendMessage(msg.pref("quest_canceled").replace("%quest_name%", def.name));
     }
 
     public void stopQuest(UUID uuid, String playerName, String questId) {
         if (uuid == null || playerName == null || questId == null) return;
-        progress.cancel(uuid, playerName, questId);
+        String id = questId.toLowerCase(Locale.ROOT);
+        progress.cancel(uuid, playerName, id);
         Player p = Bukkit.getPlayer(uuid);
         if (p != null && p.isOnline()) {
-            QuestDef q = quests.get(questId);
+            QuestDef q = quests.get(id);
             if (q != null) actions.runAll(q, "cancel", p);
-            p.sendMessage(msg.pref("quest_stopped").replace("%quest_name%", q != null ? q.name : questId));
+            p.sendMessage(msg.pref("quest_stopped").replace("%quest_name%", q != null ? q.name : id));
         }
     }
 
-    public void stopQuest(Player p, QuestDef q) {
-        if (p == null || q == null) return;
-        if (!progress.isActive(p.getUniqueId(), p.getName(), q.id)) return;
-        progress.cancel(p.getUniqueId(), p.getName(), q.id);
-        p.sendMessage(msg.pref("quest_stopped").replace("%quest_name%", q.name));
+    public void stopQuest(Player player, QuestDef def) {
+        if (player == null || def == null) return;
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+        if (!progress.isActive(uid, name, def.id)) return;
+        progress.cancel(uid, name, def.id);
+        player.sendMessage(msg.pref("quest_stopped").replace("%quest_name%", def.name));
     }
 
     public void forceComplete(UUID uuid, String playerName, String questId) {
         if (uuid == null || playerName == null || questId == null) return;
+        String id = questId.toLowerCase(Locale.ROOT);
         Player p = Bukkit.getPlayer(uuid);
-        QuestDef q = quests.get(questId);
+        QuestDef q = quests.get(id);
         int pts = q != null ? q.points : 0;
-        progress.complete(uuid, playerName, questId, pts);
+        progress.complete(uuid, playerName, id, pts);
         if (p != null && q != null) {
             actions.runAll(q, "success", p);
             p.sendMessage(msg.pref("quest_completed").replace("%quest_name%", q.name));
@@ -199,540 +231,524 @@ public final class Engine {
         }
     }
 
-    public void forceComplete(Player p, QuestDef q) {
-        if (p == null || q == null) return;
-        progress.complete(p.getUniqueId(), p.getName(), q.id, q.points);
-        actions.runAll(q, "success", p);
-        p.sendMessage(msg.pref("quest_completed").replace("%quest_name%", q.name));
-        runCompletionFlow(p, q);
+    public void forceComplete(Player player, QuestDef def) {
+        if (player == null || def == null) return;
+
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        progress.complete(uid, name, def.id, def.points);
+        actions.runAll(def, "success", player);
+        player.sendMessage(msg.pref("quest_completed").replace("%quest_name%", def.name));
+        runCompletionFlow(player, def);
     }
 
-    public void abandonAll(Player p) {
-        if (p == null) return;
-        progress.cancelAll(p.getUniqueId(), p.getName());
-        p.sendMessage(msg.pref("abandon_all_done"));
+    public void abandonAll(Player player) {
+        if (player == null) return;
+        progress.cancelAll(player.getUniqueId(), player.getName());
+        player.sendMessage(msg.pref("abandon_all_done"));
     }
 
-    public void listActiveTo(Player p) {
-        if (p == null) return;
-        List<String> active = progress.activeOf(p.getUniqueId(), p.getName());
+    public void listActiveTo(Player player) {
+        if (player == null) return;
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        List<String> active = progress.activeOf(uid, name);
         if (active == null || active.isEmpty()) {
-            p.sendMessage(msg.pref("list_empty"));
+            player.sendMessage(msg.pref("list_empty"));
             return;
         }
-        p.sendMessage(msg.pref("list_header"));
 
+        player.sendMessage(msg.pref("list_header"));
         StringBuilder sb = new StringBuilder(64);
-        for (String id : active) {
-            QuestDef q = quests.get(id);
-            if (q == null) continue;
 
-            int val = progress.value(p.getUniqueId(), p.getName(), id);
-            int target = Math.max(1, q.amount);
-            double pct = Math.min(1.0, Math.max(0.0, val / (double) target));
+        for (String id : active) {
+            QuestDef def = quests.byId(id);
+            if (def == null) continue;
+
+            int value = progress.value(uid, name, id);
+            int target = Math.max(1, def.amount);
+            double pct = Math.min(1.0, Math.max(0.0, value / (double) target));
             int filled = (int) (pct * 20);
 
             sb.setLength(0);
-            sb.append("§f- §a").append(q.name).append(" §7(§e").append(val).append(" / ").append(target).append("§7) ");
+            sb.append("§f- §a").append(def.name).append(" §7(§e")
+                    .append(value).append(" / ").append(target).append("§7) ");
             sb.append("§a");
             for (int i = 0; i < filled; i++) sb.append('■');
             sb.append("§7");
             for (int i = filled; i < 20; i++) sb.append('■');
 
-            p.sendMessage(sb.toString());
+            player.sendMessage(sb.toString());
         }
     }
 
-    /**
-     * NPC/엔티티 우클릭 전용 두-번-클릭 플로우
-     * targetKey 예) "CITIZENS_1" 또는 "VILLAGER"
-     */
-    public void handleNpcInteract(Player p, String targetKey) {
-        if (p == null || targetKey == null || targetKey.isEmpty()) return;
-
-        // 이 퀘스트들만 조사
-        QuestDef[] list = quests.byEvent("ENTITY_INTERACT");
-        if (list.length == 0) return;
-
-        UUID uid = p.getUniqueId();
-        String name = p.getName();
-
-        // 같은 타깃으로 시작 가능한 퀘스트 찾기 (start_mode: PUBLIC|NPC)
-        QuestDef candidate = null;
-        for (QuestDef q : list) {
-            if (q == null) continue;
-            if (!(q.startMode == QuestDef.StartMode.PUBLIC || q.startMode == QuestDef.StartMode.NPC)) continue;
-
-            // 타깃 매칭: targets 비었으면 프리매치, 있으면 키 일치 필요
-            boolean matched = !q.hasTarget();
-            if (!matched) {
-                for (String t : q.targets) {
-                    if (t.equalsIgnoreCase(targetKey)) { matched = true; break; }
-                }
-            }
-            if (!matched) continue;
-
-            candidate = q;
-            break;
-        }
-        if (candidate == null) return;
-
-        // 두-번-클릭 윈도우 검사
-        long now = System.nanoTime();
-        String armed = armedQuest.get(uid);
-        Long until = armedUntil.get(uid);
-
-        // ① 이미 무장 상태이고 같은 퀘스트 & 아직 유효 → 성공 처리
-        if (armed != null && armed.equalsIgnoreCase(candidate.id) && until != null && until > now) {
-            // 활성 중일 때만 완료
-            if (progress.isActive(uid, name, candidate.id)) {
-                handleQuestCompleteOnMain(p, candidate);
-            } else {
-                // 혹시 중간에 취소/리셋됐다면 안전하게 시작 후 완료
-                progress.start(uid, name, candidate.id);
-                actions.runAll(candidate, "start", p);
-                handleQuestCompleteOnMain(p, candidate);
-            }
-            // 상태 해제
-            armedQuest.remove(uid);
-            armedUntil.remove(uid);
-            return;
-        }
-
-        // ② 아직 무장되지 않았거나 다른 퀘스트였다면: 시작만 수행하고 무장
-        if (!progress.isActive(uid, name, candidate.id)) {
-            progress.start(uid, name, candidate.id);
-            actions.runAll(candidate, "start", p);
-            p.sendMessage(msg.pref("quest_started").replace("%quest_name%", candidate.name));
-        } else {
-            // 이미 활성화되어 있는데 첫 클릭이면(= 무장 아님) 바로 무장만
-            // (혹시 다른 인터랙트로 활성화한 경우에도 동일하게 동작)
-        }
-
-        armedQuest.put(uid, candidate.id);
-        armedUntil.put(uid, now + INTERACT_ARM_WINDOW_NANOS);
+    public void handleNpcInteract(Player player, String targetKey) {
+        if (player == null || targetKey == null || targetKey.isEmpty()) return;
+        Map<String, Object> ctx = new HashMap<String, Object>();
+        ctx.put("target_id", targetKey);
+        handleCustom(player, "ENTITY_INTERACT", ctx);
     }
 
-    public void handle(Player p, String eventName, Event e) {
-        if (p == null || eventName == null) return;
-        QuestDef[] list = quests.byEvent(eventName);
+    public void handle(Player player, String eventName, Event event) {
+        if (player == null || eventName == null) return;
+
+        String key = normalizeEventKey(eventName);
+        QuestDef[] list = quests.byEvent(key);
         if (list.length == 0) return;
 
-        UUID uid = p.getUniqueId();
-        if (isDedup(uid, eventName)) return;
+        UUID uid = player.getUniqueId();
+        if (isDedup(uid, key)) return;
 
+        Map<String, Object> ctx = EventContextMapper.map(event);
         Object lock = playerLocks.computeIfAbsent(uid, k -> new Object());
+
         worker.execute(() -> {
             synchronized (lock) {
-                processEventInternal(p, eventName, e, list);
+                processEventInternal(player, key, event, ctx, list);
             }
         });
     }
 
     public void handleCustom(Player player, String eventKey, Map<String, Object> ctx) {
-        if (!eventKey.equalsIgnoreCase("ENTITY_INTERACT")) return;
+        if (player == null || eventKey == null) return;
 
-        String target = String.valueOf(ctx.get("target_id"));
-        if (target == null || target.isEmpty()) return;
-
-        for (QuestDef def : quests.byEvent(eventKey)) {
-            // start_mode 검사 (PUBLIC 또는 NPC 허용)
-            if (def.startMode != QuestDef.StartMode.PUBLIC && def.startMode != QuestDef.StartMode.NPC)
-                continue;
-
-            // 타깃 일치 확인
-            if (!def.matchesTarget(target)) continue;
-
-            PlayerData data = progress.get(player.getUniqueId());
-
-            // 아직 시작 안했으면 시작
-            if (!data.isActive(def.id) && !data.isCompleted(def.id)) {
-                startQuest(player, def.id);
-                return;
-            }
-
-            // 이미 진행 중이면 완료 처리
-            if (data.isActive(def.id) && !data.isCompleted(def.id)) {
-                completeQuest(player, def.id);
-                return;
-            }
-
-            // 이미 완료된 경우는 무시
-        }
-    }
-
-
-    public void handleDynamic(Player p, String key, Object val) {
-        if (p == null || key == null) return;
-        Map<String, Object> ctx = new HashMap<>();
-        if (val != null) ctx.put("value", val);
-        handleCustom(p, key, ctx);
-    }
-
-    public void handleDynamic(Event e) {
-        if (e == null) return;
-
-        // 플레이어 탐지
-        Player p = EventContextMapper.extractPlayer(e);
-        if (p == null) {
-            if (e instanceof EntityDeathEvent de && de.getEntity().getKiller() != null)
-                p = de.getEntity().getKiller();
-            else if (e instanceof EntityDamageByEntityEvent hit && hit.getDamager() instanceof Player dp)
-                p = dp;
-        }
-        if (p == null) return;
-
-        // 이벤트 키 정규화 (ex: BlockBreakEvent → BLOCK_BREAK)
-        String eventKey = e.getClass().getSimpleName()
-                .replace("Event", "")
-                .replace("MythicMob", "MYTHICMOBS_")
-                .replace("Player", "PLAYER_")
-                .replace("Entity", "ENTITY_")
-                .replace("Block", "BLOCK_")
-                .replace("Inventory", "INVENTORY_")
-                .replace("Item", "ITEM_")
-                .toUpperCase(Locale.ROOT);
-
-        switch (eventKey) {
-            case "PLAYER_INTERACT_ENTITY" -> eventKey = "ENTITY_INTERACT";   // Citizens, MythicMobs 등 NPC 클릭
-            case "PLAYER_INTERACT" -> eventKey = "BLOCK_INTERACT";            // 블록 클릭류 통합
-            case "PLAYER_DROP_ITEM" -> eventKey = "ITEM_DROP";                // 아이템 드롭
-            case "PLAYER_PICKUP_ITEM" -> eventKey = "ITEM_PICKUP";            // 아이템 줍기
-            case "ENTITY_DEATH" -> eventKey = "MOBKILLING";                   // 퀘스트 호환용
-        }
-
-        // 퀘스트 매칭
-        QuestDef[] list = quests.byEvent(eventKey);
+        String key = normalizeEventKey(eventKey);
+        QuestDef[] list = quests.byEvent(key);
         if (list.length == 0) return;
 
-        UUID uid = p.getUniqueId();
-        if (isDedup(uid, eventKey)) return;
+        UUID uid = player.getUniqueId();
+        if (isDedup(uid, key)) return;
 
-        // 컨텍스트 빌드
-        Map<String, Object> ctx = EventContextMapper.map(e);
+        if (ctx == null) ctx = Collections.emptyMap();
+        Map<String, Object> finalCtx = ctx;
         Object lock = playerLocks.computeIfAbsent(uid, k -> new Object());
 
-        // 비동기 처리
-        Player finalP = p;
         worker.execute(() -> {
             synchronized (lock) {
-                List<Runnable> pending = new ArrayList<>(4);
-
-                for (QuestDef q : list) {
-                    if (q == null) continue;
-                    if (!progress.isActive(uid, finalP.getName(), q.id)) continue;
-
-                    boolean fail = false;
-                    for (String cond : q.condFail) {
-                        if (cachedEval(finalP, e, ctx, cond)) { fail = true; break; }
-                    }
-                    if (fail) {
-                        final String qid = q.id;
-                        pending.add(() -> {
-                            actions.runAll(q, "fail", finalP);
-                            progress.cancel(uid, finalP.getName(), qid);
-                        });
-                        continue;
-                    }
-
-                    boolean ok = true;
-                    for (String cond : q.condSuccess) {
-                        if (!cachedEval(finalP, e, ctx, cond)) { ok = false; break; }
-                    }
-                    if (!ok) continue;
-
-                    int val = progress.addProgress(uid, finalP.getName(), q.id, 1);
-                    if (val >= q.amount) {
-                        pending.add(() -> handleQuestCompleteOnMain(finalP, q));
-                    }
-                }
-
-                if (!pending.isEmpty()) {
-                    Bukkit.getScheduler().runTask(plugin, () -> {
-                        for (Runnable r : pending) {
-                            try { r.run(); } catch (Throwable ignored) {}
-                        }
-                    });
+                if ("ENTITY_INTERACT".equalsIgnoreCase(key)) {
+                    processNpcInteract(player, finalCtx, list);
+                } else {
+                    processCustomInternal(player, key, finalCtx, list);
                 }
             }
         });
     }
 
-    private boolean markArmed(UUID uid, String qid) {
-        return interactArmed.computeIfAbsent(uid, k -> ConcurrentHashMap.newKeySet()).add(qid);
+    public void handleDynamic(Player player, String key, Object value) {
+        if (player == null || key == null) return;
+        Map<String, Object> ctx = new HashMap<String, Object>();
+        if (value != null) ctx.put("value", value);
+        handleCustom(player, key, ctx);
     }
 
-    private boolean consumeArmed(UUID uid, String qid) {
-        Set<String> set = interactArmed.get(uid);
-        if (set == null) return false;
-        boolean had = set.remove(qid);
-        if (set.isEmpty()) interactArmed.remove(uid);
-        return had;
-    }
+    public void handleDynamic(Event event) {
+        if (event == null) return;
 
-    private void processEventInternal(Player p, String eventName, Event e, QuestDef[] list) {
-        UUID uid = p.getUniqueId();
-        String name = p.getName();
-
-        boolean isInteract = "ENTITY_INTERACT".equalsIgnoreCase(eventName);
-
-        TargetMatcher matcher = matchers.get(eventName.toLowerCase(Locale.ROOT));
-        if (matcher == null) matcher = matchers.getOrDefault("*", (pp, ee, t) -> true);
-
-        List<Runnable> pending = new ArrayList<>(4);
-
-        for (QuestDef q : list) {
-            if (q == null) continue;
-
-            boolean active = progress.isActive(uid, name, q.id);
-
-            // [1] ENTITY_INTERACT + 아직 시작 안함 → 첫 클릭 (start)
-            if (isInteract && !active && (q.startMode == QuestDef.StartMode.PUBLIC || q.startMode == QuestDef.StartMode.NPC)) {
-                boolean matched = !q.hasTarget();
-                if (!matched) {
-                    for (String t : q.targets) {
-                        if (matcher.test(p, e, t)) { matched = true; break; }
-                    }
+        Player player = EventContextMapper.extractPlayer(event);
+        if (player == null) {
+            if (event instanceof EntityDeathEvent) {
+                EntityDeathEvent de = (EntityDeathEvent) event;
+                if (de.getEntity().getKiller() != null) {
+                    player = de.getEntity().getKiller();
                 }
-                if (!matched) continue;
+            }
+        }
+        if (player == null) return;
 
-                // 첫 클릭: 퀘스트 시작 + 무장 상태 설정
+        String key = guessEventKeyFromClass(event.getClass().getSimpleName());
+        QuestDef[] list = quests.byEvent(key);
+        if (list.length == 0) return;
+
+        UUID uid = player.getUniqueId();
+        if (isDedup(uid, key)) return;
+
+        Map<String, Object> ctx = EventContextMapper.map(event);
+        Object lock = playerLocks.computeIfAbsent(uid, k -> new Object());
+
+        Player finalPlayer = player;
+        worker.execute(() -> {
+            synchronized (lock) {
+                processEventInternal(finalPlayer, key, event, ctx, list);
+            }
+        });
+    }
+
+    public void completeQuest(Player player, String questId) {
+        if (player == null || questId == null) return;
+        String id = questId.toLowerCase(Locale.ROOT);
+
+        QuestDef def = quests.byId(id);
+        if (def == null) return;
+
+        PlayerData data = progress.get(player.getUniqueId());
+        if (data == null || !data.isActive(id)) return;
+
+        data.complete(id, def.points);
+        progress.save(data);
+
+        actions.run(def, "success", player);
+
+        if (def.nextQuestOnComplete != null && !def.nextQuestOnComplete.isEmpty()) {
+            QuestDef next = quests.byId(def.nextQuestOnComplete);
+            if (next != null) startQuest(player, next.id);
+        }
+
+        player.sendMessage(msg.pref("quest_completed")
+                .replace("%quest_name%", def.name));
+    }
+
+    private void processEventInternal(Player player, String eventKey, Event event, Map<String, Object> ctx, QuestDef[] list) {
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        TargetMatcher matcher = matchers.get(eventKey.toLowerCase(Locale.ROOT));
+        if (matcher == null) matcher = matchers.get("*");
+
+        List<Runnable> pending = new ArrayList<Runnable>();
+
+        for (QuestDef def : list) {
+            if (def == null) continue;
+
+            boolean active = progress.isActive(uid, name, def.id);
+
+            if (!active) {
+                if (def.startMode == QuestDef.StartMode.AUTO || def.startMode == QuestDef.StartMode.PUBLIC || def.startMode == QuestDef.StartMode.NPC) {
+                    if (eventKey.equalsIgnoreCase("ENTITY_INTERACT")) {
+                        continue;
+                    }
+                    if (!checkTargetMatch(player, event, matcher, def)) {
+                        continue;
+                    }
+                    if (!checkConditions(player, event, ctx, def.condStart)) {
+                        continue;
+                    }
+                    progress.start(uid, name, def.id);
+                    actions.runAll(def, "accept", player);
+                    actions.runAll(def, "start", player);
+                    player.sendMessage(msg.pref("quest_started").replace("%quest_name%", def.name));
+                    active = true;
+                }
+            }
+
+            if (!active) continue;
+
+            if (!checkTargetMatch(player, event, matcher, def)) {
+                continue;
+            }
+
+            if (checkAnyFail(player, event, ctx, def.condFail)) {
+                final String qid = def.id;
                 pending.add(() -> {
-                    actions.runAll(q, "start", p);
-                    progress.start(uid, name, q.id);
-                    markArmed(uid, q.id);
+                    actions.runAll(def, "fail", player);
+                    progress.cancel(uid, name, qid);
                 });
                 continue;
             }
 
-            // [2] 일반 진행 중 퀘스트
-            if (!active) continue;
+            if (!checkConditions(player, event, ctx, def.condSuccess)) {
+                continue;
+            }
 
-            boolean matched = !q.hasTarget();
-            if (!matched) {
-                for (String t : q.targets) {
-                    if (matcher.test(p, e, t)) { matched = true; break; }
+            int value = progress.addProgress(uid, name, def.id, 1);
+            if (value >= def.amount) {
+                pending.add(() -> handleQuestCompleteOnMain(player, def));
+            }
+        }
+
+        if (!pending.isEmpty()) {
+            Bukkit.getScheduler().runTask(plugin, () -> {
+                for (Runnable r : pending) {
+                    try {
+                        r.run();
+                    } catch (Throwable ignored) {
+                    }
                 }
+            });
+        }
+    }
+
+    private void processCustomInternal(Player player, String eventKey, Map<String, Object> ctx, QuestDef[] list) {
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        List<Runnable> pending = new ArrayList<Runnable>();
+
+        for (QuestDef def : list) {
+            if (def == null) continue;
+            if (!progress.isActive(uid, name, def.id)) continue;
+
+            if (checkAnyFail(player, null, ctx, def.condFail)) {
+                final String qid = def.id;
+                pending.add(() -> {
+                    actions.runAll(def, "fail", player);
+                    progress.cancel(uid, name, qid);
+                });
+                continue;
+            }
+
+            if (!checkConditions(player, null, ctx, def.condSuccess)) {
+                continue;
+            }
+
+            pending.add(() -> handleQuestCompleteOnMain(player, def));
+        }
+
+        if (!pending.isEmpty()) {
+            Bukkit.getScheduler().runTask(plugin, () -> {
+                for (Runnable r : pending) {
+                    try {
+                        r.run();
+                    } catch (Throwable ignored) {
+                    }
+                }
+            });
+        }
+    }
+
+    private void processNpcInteract(Player player, Map<String, Object> ctx, QuestDef[] list) {
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
+
+        String targetId = String.valueOf(ctx.get("target_id"));
+        if (targetId == null) targetId = "";
+        targetId = targetId.trim();
+        if (targetId.isEmpty()) return;
+
+        QuestDef candidate = null;
+
+        for (QuestDef def : list) {
+            if (def == null) continue;
+            if (def.startMode != QuestDef.StartMode.PUBLIC && def.startMode != QuestDef.StartMode.NPC) continue;
+
+            boolean matched;
+            if (!def.hasTarget()) {
+                matched = true;
+            } else {
+                matched = def.matchesTarget(targetId);
             }
             if (!matched) continue;
 
-            // 실패 조건
-            boolean fail = false;
-            for (String cond : q.condFail) {
-                if (cachedEval(p, e, null, cond)) { fail = true; break; }
-            }
-            if (fail) {
-                final String qid = q.id;
-                pending.add(() -> {
-                    actions.runAll(q, "fail", p);
-                    progress.cancel(uid, name, qid);
-                });
-                continue;
-            }
-
-            // 성공 조건
-            boolean ok = true;
-            for (String cond : q.condSuccess) {
-                if (!cachedEval(p, e, null, cond)) { ok = false; break; }
-            }
-            if (!ok) continue;
-
-            // [3] 두 번째 클릭 시 (armed 상태면 즉시 완료)
-            if (isInteract) {
-                if (consumeArmed(uid, q.id)) {
-                    pending.add(() -> handleQuestCompleteOnMain(p, q));
-                }
-                continue;
-            }
-
-            // [4] 누적형 이벤트 (ex: BLOCK_BREAK)
-            int val = progress.addProgress(uid, name, q.id, 1);
-            if (val >= q.amount) {
-                pending.add(() -> handleQuestCompleteOnMain(p, q));
-            }
+            candidate = def;
+            break;
         }
 
-        if (!pending.isEmpty()) {
-            Bukkit.getScheduler().runTask(plugin, () -> {
-                for (Runnable r : pending) {
-                    try { r.run(); } catch (Throwable ignored) {}
+        if (candidate == null) return;
+
+        long now = System.nanoTime();
+        NpcArmState arm = npcArm.get(uid);
+
+        boolean active = progress.isActive(uid, name, candidate.id);
+        boolean completed = progress.isCompleted(uid, name, candidate.id);
+
+        if (arm != null && arm.questId.equalsIgnoreCase(candidate.id) && arm.until > now) {
+            if (!completed) {
+                if (!checkAnyFail(player, null, ctx, candidate.condFail) && checkConditions(player, null, ctx, candidate.condSuccess)) {
+                    QuestDef finalCandidate = candidate;
+                    Bukkit.getScheduler().runTask(plugin, () -> handleQuestCompleteOnMain(player, finalCandidate));
                 }
-            });
+            }
+            npcArm.remove(uid);
+            return;
         }
+
+        if (!active && !completed) {
+            if (!checkConditions(player, null, ctx, candidate.condStart)) {
+                return;
+            }
+            progress.start(uid, name, candidate.id);
+            actions.runAll(candidate, "accept", player);
+            actions.runAll(candidate, "start", player);
+            player.sendMessage(msg.pref("quest_started").replace("%quest_name%", candidate.name));
+        }
+
+        npcArm.put(uid, new NpcArmState(candidate.id, now + NPC_ARM_WINDOW_NANOS));
     }
 
-    private void processCustomInternal(Player p, QuestDef[] list, Map<String, Object> ctx) {
-        UUID uid = p.getUniqueId();
-        String name = p.getName();
-        List<Runnable> pending = new ArrayList<>(4);
+    private void handleQuestCompleteOnMain(Player player, QuestDef def) {
+        UUID uid = player.getUniqueId();
+        String name = player.getName();
 
-        for (QuestDef q : list) {
-            if (q == null) continue;
-            if (!progress.isActive(uid, name, q.id)) continue;
+        actions.runAll(def, "success", player);
+        progress.complete(uid, name, def.id, def.points);
+        player.sendMessage(msg.pref("quest_completed").replace("%quest_name%", def.name));
 
-            boolean fail = false;
-            for (String cond : q.condFail) {
-                if (cachedEval(p, null, ctx, cond)) { fail = true; break; }
-            }
-            if (fail) {
-                final String qid = q.id;
-                pending.add(() -> {
-                    actions.runAll(q, "fail", p);
-                    progress.cancel(uid, name, qid);
-                });
-                continue;
-            }
-
-            boolean ok = true;
-            for (String cond : q.condSuccess) {
-                if (!cachedEval(p, null, ctx, cond)) { ok = false; break; }
-            }
-            if (!ok) continue;
-
-            pending.add(() -> handleQuestCompleteOnMain(p, q));
-        }
-
-        if (!pending.isEmpty()) {
-            Bukkit.getScheduler().runTask(plugin, () -> {
-                for (Runnable r : pending) {
-                    try { r.run(); } catch (Throwable ignored) {}
-                }
-            });
-        }
+        runCompletionFlow(player, def);
     }
 
-    private void handleQuestCompleteOnMain(Player p, QuestDef q) {
-        UUID uid = p.getUniqueId();
-        String name = p.getName();
+    private void runCompletionFlow(Player player, QuestDef def) {
+        String nextId = resolveNextId(def);
 
-        actions.runAll(q, "success", p);
-        progress.complete(uid, name, q.id, q.points);
-        p.sendMessage(msg.pref("quest_completed").replace("%quest_name%", q.name));
-
-        runCompletionFlow(p, q);
-    }
-
-    private void runCompletionFlow(Player p, QuestDef q) {
-        String nextId = resolveNextId(q);
-        if (nextId != null && !nextId.isBlank()) {
-            QuestDef next = quests.get(nextId);
+        if (nextId != null && !nextId.isEmpty()) {
+            QuestDef next = quests.byId(nextId);
             if (next != null) {
                 if (isBoardQuest(next)) {
-                    p.sendMessage(
+                    player.sendMessage(
                             msg.pref("quest_chain_board")
-                                    .replace("%current%", q.name)
+                                    .replace("%current%", def.name)
                                     .replace("%next%", next.name)
                     );
                 } else {
-                    p.sendMessage(
+                    player.sendMessage(
                             msg.pref("quest_chain")
-                                    .replace("%current%", q.name)
+                                    .replace("%current%", def.name)
                                     .replace("%next%", next.name)
                     );
-                    startQuest(p, next);
+                    startQuest(player, next);
                 }
             } else {
-                p.sendMessage(msg.pref("quest_chain_end"));
+                player.sendMessage(msg.pref("quest_chain_end"));
             }
         }
 
-        if (q.repeat < 0) {
-            if (isBoardQuest(q)) {
-                p.sendMessage(
-                        msg.pref("quest_board_repeat").replace("%quest_name%", q.name)
+        if (def.repeat < 0) {
+            if (isBoardQuest(def)) {
+                player.sendMessage(
+                        msg.pref("quest_board_repeat").replace("%quest_name%", def.name)
                 );
             } else {
                 Supplier<Boolean> started = () -> {
-                    if (progress.isActive(p.getUniqueId(), p.getName(), q.id)) return false;
-                    progress.start(p.getUniqueId(), p.getName(), q.id);
-                    actions.runAll(q, "restart", p);
-                    actions.runAll(q, "repeat", p);
-                    return true;
+                    if (progress.isActive(player.getUniqueId(), player.getName(), def.id)) return Boolean.FALSE;
+                    progress.start(player.getUniqueId(), player.getName(), def.id);
+                    actions.runAll(def, "restart", player);
+                    actions.runAll(def, "repeat", player);
+                    return Boolean.TRUE;
                 };
                 started.get();
             }
         }
     }
 
-    private String resolveNextId(QuestDef q) {
-        if (q == null || q.actions == null) return null;
-        List<String> list = q.actions.get("next");
-        if (list == null || list.isEmpty()) return null;
-        String raw = list.get(0);
-        if (raw == null) return null;
-        String s = raw.trim();
-        if (s.isEmpty()) return null;
-        int sp = s.indexOf(' ');
-        return sp > 0 ? s.substring(0, sp) : s;
+    private String resolveNextId(QuestDef def) {
+        if (def == null) return null;
+
+        if (def.nextQuestOnComplete != null && !def.nextQuestOnComplete.isEmpty()) {
+            return def.nextQuestOnComplete;
+        }
+
+        if (def.actions != null) {
+            List<String> list = def.actions.get("next");
+            if (list != null && !list.isEmpty()) {
+                String raw = list.get(0);
+                if (raw != null) {
+                    String s = raw.trim();
+                    if (!s.isEmpty()) {
+                        int sp = s.indexOf(' ');
+                        return sp > 0 ? s.substring(0, sp) : s;
+                    }
+                }
+            }
+        }
+        return null;
     }
 
-    private boolean isBoardQuest(QuestDef q) {
-        return q != null && q.isPublic;
+    private boolean isBoardQuest(QuestDef def) {
+        return def != null && def.isPublic;
     }
 
-    private boolean allowBoardStartContext(Player p) {
+    private boolean allowBoardStartContext(Player player) {
         return true;
     }
 
-    private boolean cachedEval(Player p, Event e, Map<String, Object> ctx, String expr) {
+    private boolean checkConditions(Player player, Event event, Map<String, Object> ctx, List<String> list) {
+        if (list == null || list.isEmpty()) return true;
+        for (String expr : list) {
+            if (!cachedEval(player, event, ctx, expr)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private boolean checkAnyFail(Player player, Event event, Map<String, Object> ctx, List<String> list) {
+        if (list == null || list.isEmpty()) return false;
+        for (String expr : list) {
+            if (cachedEval(player, event, ctx, expr)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private boolean cachedEval(Player player, Event event, Map<String, Object> ctx, String expr) {
         if (expr == null || expr.isEmpty()) return true;
-        String key = p.getUniqueId() + "|" + expr;
+        String key = player.getUniqueId() + "|" + expr;
         long now = System.nanoTime();
         BoolCacheEntry ent = conditionCache.get(key);
-        if (ent != null && ent.expireAt > now) return ent.value;
-        boolean val = ConditionEvaluator.eval(p, e, ctx, expr);
+        if (ent != null && ent.expireAt > now) {
+            return ent.value;
+        }
+        boolean val = ConditionEvaluator.eval(player, event, ctx, expr);
         conditionCache.put(key, new BoolCacheEntry(val, now + conditionTtlNanos));
         return val;
     }
 
     private boolean isDedup(UUID uid, String key) {
         long now = System.nanoTime();
-        Map<String, Long> m = recentEventWindow.computeIfAbsent(uid, k -> new ConcurrentHashMap<>(8));
+        Map<String, Long> m = recentEventWindow.computeIfAbsent(uid, k -> new ConcurrentHashMap<String, Long>());
         Long last = m.get(key);
         if (last != null && now - last < dedupWindowNanos) return true;
         m.put(key, now);
         return false;
     }
 
+    private boolean checkTargetMatch(Player player, Event event, TargetMatcher matcher, QuestDef def) {
+        if (!def.hasTarget()) return true;
+        if (matcher == null) return true;
+        for (String t : def.targets) {
+            if (matcher.test(player, event, t)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     private void installDefaultMatchers() {
-        matchers.put("*", (p, e, t) -> true);
+        matchers.put("*", (player, event, target) -> true);
 
-        matchers.put("block_break", (p, e, t) -> {
-            if (!(e instanceof BlockBreakEvent be)) return false;
-            if (t == null || t.isEmpty()) return true;
-            return tokenAnyMatch(be.getBlock().getType().name(), t);
+        matchers.put("block_break", (player, event, target) -> {
+            if (!(event instanceof BlockBreakEvent)) return false;
+            BlockBreakEvent be = (BlockBreakEvent) event;
+            if (target == null || target.isEmpty()) return true;
+            return tokenAnyMatch(be.getBlock().getType().name(), target);
         });
 
-        matchers.put("block_place", (p, e, t) -> {
-            if (!(e instanceof BlockPlaceEvent bp)) return false;
-            if (t == null || t.isEmpty()) return true;
-            return tokenAnyMatch(bp.getBlockPlaced().getType().name(), t);
+        matchers.put("block_place", (player, event, target) -> {
+            if (!(event instanceof BlockPlaceEvent)) return false;
+            BlockPlaceEvent bp = (BlockPlaceEvent) event;
+            if (target == null || target.isEmpty()) return true;
+            return tokenAnyMatch(bp.getBlockPlaced().getType().name(), target);
         });
 
-        matchers.put("entity_kill", (p, e, t) -> {
-            if (!(e instanceof EntityDeathEvent de)) return false;
-            if (t == null || t.isEmpty()) return true;
-            return tokenAnyMatch(de.getEntity().getType().name(), t);
+        matchers.put("entity_kill", (player, event, target) -> {
+            if (!(event instanceof EntityDeathEvent)) return false;
+            EntityDeathEvent de = (EntityDeathEvent) event;
+            if (target == null || target.isEmpty()) return true;
+            return tokenAnyMatch(de.getEntity().getType().name(), target);
         });
 
         matchers.put("entity_interact", TargetMatchers.ENTITY_INTERACT_MATCHER);
 
-        matchers.put("player_command", (p, e, t) -> {
-            if (!(e instanceof PlayerCommandPreprocessEvent ce)) return false;
-            if (t == null || t.isEmpty()) return true;
-            return ce.getMessage().toLowerCase(Locale.ROOT).startsWith("/" + t.toLowerCase(Locale.ROOT));
+        matchers.put("player_command", (player, event, target) -> {
+            if (!(event instanceof PlayerCommandPreprocessEvent)) return false;
+            PlayerCommandPreprocessEvent ce = (PlayerCommandPreprocessEvent) event;
+            if (target == null || target.isEmpty()) return true;
+            return ce.getMessage().toLowerCase(Locale.ROOT).startsWith("/" + target.toLowerCase(Locale.ROOT));
         });
 
-        matchers.put("player_chat", (p, e, t) -> {
-            if (!(e instanceof AsyncPlayerChatEvent ce)) return false;
-            if (t == null || t.isEmpty()) return true;
-            return ce.getMessage().toLowerCase(Locale.ROOT).contains(t.toLowerCase(Locale.ROOT));
+        matchers.put("player_chat", (player, event, target) -> {
+            if (!(event instanceof AsyncPlayerChatEvent)) return false;
+            AsyncPlayerChatEvent ce = (AsyncPlayerChatEvent) event;
+            if (target == null || target.isEmpty()) return true;
+            return ce.getMessage().toLowerCase(Locale.ROOT).contains(target.toLowerCase(Locale.ROOT));
         });
     }
 
-    private static boolean tokenAnyMatch(String val, String target) {
-        String v = val.toUpperCase(Locale.ROOT);
-        for (String tok : target.split("\\|")) {
+    private static boolean tokenAnyMatch(String value, String target) {
+        String v = value.toUpperCase(Locale.ROOT);
+        String[] parts = target.split("\\|");
+        for (String tok : parts) {
             tok = tok.trim();
             if (tok.isEmpty()) continue;
             boolean neg = tok.charAt(0) == '!';
@@ -747,32 +763,31 @@ public final class Engine {
 
     private void preloadInternalQuests() {
         try {
-            if (plugin.getResource("quests") != null) {
-                plugin.getLogger().info("[QuestEngine] Loading internal quests from JAR");
-                quests.reload();
-            }
+            quests.reload();
+            quests.rebuildEventMap();
         } catch (Throwable t) {
             plugin.getLogger().warning("[QuestEngine] Internal quest load failed: " + t.getMessage());
         }
     }
 
     private void scheduleDailyResets() {
-        Map<String, List<String>> timeToQuestIds = new HashMap<>();
+        Map<String, List<String>> timeToQuestIds = new HashMap<String, List<String>>();
         String defaultTime = plugin.getConfig().getString("reset.default-time", "04:00");
 
         for (String id : quests.ids()) {
-            QuestDef q = quests.get(id);
-            if (q == null || q.reset == null) continue;
-            if (!"DAILY".equalsIgnoreCase(q.reset.policy)) continue;
-            String at = (q.reset.time == null || q.reset.time.isBlank()) ? defaultTime : q.reset.time;
-            timeToQuestIds.computeIfAbsent(at, k -> new ArrayList<>()).add(id);
+            QuestDef def = quests.byId(id);
+            if (def == null || def.reset == null) continue;
+            if (!"DAILY".equalsIgnoreCase(def.reset.policy)) continue;
+            String at = (def.reset.time == null || def.reset.time.isEmpty()) ? defaultTime : def.reset.time;
+            List<String> list = timeToQuestIds.computeIfAbsent(at, k -> new ArrayList<String>());
+            list.add(id);
         }
 
         for (Map.Entry<String, List<String>> e : timeToQuestIds.entrySet()) {
             String time = e.getKey();
             long delayMs = millisUntil(time);
             long periodMs = 24L * 60L * 60L * 1000L;
-            List<String> copy = List.copyOf(e.getValue());
+            List<String> copy = Collections.unmodifiableList(new ArrayList<String>(e.getValue()));
 
             Bukkit.getScheduler().runTaskTimerAsynchronously(
                     plugin,
@@ -780,46 +795,56 @@ public final class Engine {
                         for (Player p : Bukkit.getOnlinePlayers()) {
                             UUID uid = p.getUniqueId();
                             String name = p.getName();
-                            for (String qid : copy) progress.reset(uid, name, qid);
+                            for (String qid : copy) {
+                                progress.reset(uid, name, qid);
+                            }
                         }
                         plugin.getLogger().info("[QuestEngine] Daily reset done at " + time);
                     },
-                    delayMs / 50,
-                    periodMs / 50
+                    delayMs / 50L,
+                    periodMs / 50L
             );
         }
     }
 
     private long millisUntil(String hhmm) {
         String[] parts = hhmm.split(":");
-        int h = 0, m = 0;
+        int h = 0;
+        int m = 0;
         try {
             h = Integer.parseInt(parts[0]);
             if (parts.length > 1) m = Integer.parseInt(parts[1]);
-        } catch (Throwable ignored) {}
+        } catch (Throwable ignored) {
+        }
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime next = now.withHour(h).withMinute(m).withSecond(0).withNano(0);
         if (!next.isAfter(now)) next = next.plusDays(1);
         return Duration.between(now, next).toMillis();
     }
-    public void completeQuest(Player player, String questId) {
-        QuestDef def = quests.byId(questId);
-        if (def == null) return;
 
-        PlayerData data = progress.get(player.getUniqueId());
-        if (data == null || !data.isActive(questId)) return;
+    private String normalizeEventKey(String key) {
+        if (key == null) return "";
+        return key.trim().toUpperCase(Locale.ROOT);
+    }
 
-        data.complete(questId, def.points);
-        progress.save(data);
+    private String guessEventKeyFromClass(String simpleName) {
+        if (simpleName == null) return "";
+        String k = simpleName;
 
-        actions.run(def, "success", player); // ← runAll 기반 헬퍼 호출
+        if (k.endsWith("Event")) k = k.substring(0, k.length() - "Event".length());
 
-        if (def.nextQuestOnComplete != null && !def.nextQuestOnComplete.isEmpty()) {
-            QuestDef next = quests.byId(def.nextQuestOnComplete);
-            if (next != null) startQuest(player, next.id);
-        }
+        if (k.equalsIgnoreCase("PlayerInteractEntity")) return "ENTITY_INTERACT";
+        if (k.equalsIgnoreCase("PlayerDropItem")) return "ITEM_DROP";
+        if (k.equalsIgnoreCase("PlayerPickupItem")) return "ITEM_PICKUP";
+        if (k.equalsIgnoreCase("EntityDeath")) return "MOBKILLING";
 
-        player.sendMessage(msg.pref("quest_completed")
-                .replace("%quest_name%", def.name));
+        k = k.replace("MythicMob", "MYTHICMOBS_")
+                .replace("Player", "PLAYER_")
+                .replace("Entity", "ENTITY_")
+                .replace("Block", "BLOCK_")
+                .replace("Inventory", "INVENTORY_")
+                .replace("Item", "ITEM_");
+
+        return k.toUpperCase(Locale.ROOT);
     }
 }
